# vulkan_play

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  HelloTriangleApp.cpp  HelloTriangleApp.hpp  Makefile  MeshBuilder.cpp  MeshBuilder.hpp  README.md  graphic_structs.hpp  hex.cpp  main.cpp  vulkan_play.cbp
shaders/: basic.frag  basic.vert
